tests/compile_fail/invalid_filter_function_list_empty.rs
use surgeist_style::FilterFunctionList;

fn main() {
    let _list = FilterFunctionList {
        functions: Vec::new(),
    };
}
