tests/compile_fail/invalid_filter_function_list_empty.stderr
error[E0451]: field `functions` of struct `FilterFunctionList` is private
 --> tests/compile_fail/invalid_filter_function_list_empty.rs:5:9
  |
4 |     let _list = FilterFunctionList {
  |                 ------------------ in this type
5 |         functions: Vec::new(),
  |         ^^^^^^^^^ private field
